# AUNRIES

./: .gitignore  CMakeLists.txt  Makefile  asset_loader.hpp  basic_map.tmx  codex.hpp  colors.tsx  config.fnl  game.cpp  game.hpp  init.lua  map.hpp  maps.fnl  oryx_fan.tsx  roster.fnl  roster.hpp  tiles.fnl  tileset.hpp
maps/: basic_map.tmx  colors.tsx  oryx_fan.tsx  oryx_fan_creatures.tsx
script/: basic_map.lua  config.fnl  scenario.fnl
src/: asset_loader.cpp  asset_loader.hpp  codex.hpp  encounter.cpp  encounter.hpp  game.cpp  game.hpp  main.cpp  map.hpp  map_loader.cpp  map_loader.hpp  map_scene.cpp  map_scene.hpp  roster.cpp  roster.hpp  scenario.cpp  scenario.hpp  tiled.cpp  tiled.hpp  tileset.cpp  tileset.hpp
